--- a/styles.css
+++ b/styles.css
@@ -69,8 +69,8 @@ button {
     font-size: 20px;
     width: 340px;
     height: 150px;
-    background-color: transparent;
-    border: solid 1px black;
+    background-color: rgb(0, 102, 116);
+    border: solid 2px var(--buttonhover);
     border-radius: 10px;
     position: fixed;
     top: 47%;
