--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,11 @@ body {
     border-collapse: collapse;
 }
 
+.win {
+    text-shadow: 0 0 5px rgb(128, 255, 227);
+    color: rgb(128, 255, 227);
+    text-align: center;
+}
 td {
     height: 100px;
     width: 100px;
